--- a/index.html
+++ b/index.html
@@ -277,33 +277,33 @@
             <div class="brand-title">
                 <span>БРЕНДЫ</span>
             </div>
-            <div class="row" style="align-items: center">
+            <div class="brand-row" style="align-items: center">
 
-                <div class="col">
+                <div class="brand-col">
                     <img src="images/brands/brand1.png" alt="">
                 </div>
-                <div class="col">
+                <div class="brand-col">
                     <img src="images/brands/brand2.png" alt="">
                 </div>
-                <div class="col">
+                <div class="brand-col">
                     <img src="images/brands/brand3.png" alt="">
                 </div>
-                <div class="col">
+                <div class="brand-col">
                     <img src="images/brands/brand4.png" alt="">
                 </div>
-                <div class="col">
+                <div class="brand-col">
                     <img src="images/brands/brand5.png" alt="">
                 </div>
-                <div class="col">
+                <div class="brand-col">
                     <img src="images/brands/brand6.png" alt="">
                 </div>
-                <div class="col">
+                <div class="brand-col">
                     <img src="images/brands/brand8.png" alt="">
                 </div>
-                <div class="col">
+                <div class="brand-col">
                     <img src="images/brands/brand9.png" alt="">
                 </div>
-                <div class="brand-prev-icon col">
+                <div class="brand-prev-icon brand-col">
                     <svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1.56766 11.0973L1.68106 11.2304L1.79534 11.098L6.11352 6.09804L6.1982 6L6.11352 5.90196L1.79534 0.901957L1.68106 0.769636L1.56765 0.902702L0.885837 1.7027L0.802361 1.80065L0.886476 1.89804L4.42908 6L0.886477 10.102L0.802362 10.1994L0.885837 10.2973L1.56766 11.0973Z"
                               fill="#6122B1" stroke="#6122B1" stroke-width="0.3"/>
@@ -318,12 +318,12 @@
         <div class="container">
             <div class="gotoCatalog-row">
                 <div class="gotoCatalog-col">
-                    <p style="font-size: 56px;text-transform:uppercase">ExVELO — все для велолюбителей </p>
+                    <h1>ExVELO — все для велолюбителей </h1>
                 </div>
                 <div class="gotoCatalog-col">
-                    <p style="text-transform: uppercase;width: 705px;font-size: 21px">Велосипеды, велоаксессуары,
+                    <h2>Велосипеды, велоаксессуары,
                         запчасти к велосипедам,
-                        экипировка, самокаты, гироборды, электровелосипеды </p>
+                        экипировка, самокаты, гироборды, электровелосипеды </h2>
                 </div>
                 <div class="gotoCatalog-col">
                     <p> В ассортименте велосипеды и аксессуары Kellys, TREK, Ardis, LEON, Winner, Totem, Crossride,
@@ -761,7 +761,7 @@
                     </form>
                 </div>
                 <div class="col contactUs-col__img">
-                    <img style="width: 563px;height: 408px" src="images/contactus/pngwing2.png" alt="">
+                    <img style="max-width: 563px;max-height: 408px" src="images/contactus/pngwing2.png" alt="">
                 </div>
             </div>
 
