--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
                     <div class="ourAdvantages-col__figure">5</div>
                     <div class="ourAdvantages-col__text">
                         <div class="ourAdvantages-col__title">профессиональные консультации</div>
-                        <div>Каждый год мы бываем на веловыставках, знаем все о новинках в этой сфере и грамотно
+                        <div class="ourAdvantages-col__content">Каждый год мы бываем на веловыставках, знаем все о новинках в этой сфере и грамотно
                             консультируем клиентов.
                         </div>
                     </div>
@@ -747,7 +747,7 @@
     <!--contact us -->
     <section class="contactUs">
         <div class="container">
-            <div class="row">
+            <div class="contactUs-row">
                 <div class="col contactUs-col">
                     <div class="contactUs-title">Связаться с нами !</div>
                     <div class="contactUs-content">
@@ -760,8 +760,8 @@
                         <button class="btn contactUs-button">Получить консультацию</button>
                     </form>
                 </div>
-                <div class="col contactUs-col__img">
-                    <img style="max-width: 563px;max-height: 408px" src="images/contactus/pngwing2.png" alt="">
+                <div class="contactUs-col__img">
+                    <img src="images/contactus/pngwing2.png" alt="">
                 </div>
             </div>
 
@@ -837,7 +837,7 @@
                         <div class="comment-date"> Оставил отзыв 23/09/19</div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="comment-col col">
                     <div class="comment-rating">
                         <svg width="40" height="25" viewBox="0 0 40 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 25V0H33.0097L40 12.2642L33.0097 25H0Z" fill="#59D230"/>
@@ -875,7 +875,7 @@
                     </div>
 
                 </div>
-                <div class="col">
+                <div class="comment-col col">
                     <div class="comment-rating">
                         <svg width="40" height="25" viewBox="0 0 40 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 25V0H33.0097L40 12.2642L33.0097 25H0Z" fill="#59D230"/>
