--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Интернет магазин exvelo</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
 
 
 </head>
@@ -14,22 +15,25 @@
 <header>
     <div class="header-top">
         <div class="container">
-            <div class="row align-items">
+            <div class="header-top-row">
 
-                <div class="logo col-auto">
-                    <img src="images/header/logo.png" alt="">
+                <div class="logo">
+                    <a href="#">
+                        <img src="images/header/logo.png" alt="">
+                    </a>
                 </div>
 
-                <div class="tel-number col-3 ">
-                    <div  class="tel-number__ico ">
-                        <svg display="none" width="22" height="23" viewBox="0 0 22 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <div class="tel-number">
+                    <div class="tel-number__ico ">
+                        <svg display="none" width="22" height="23" viewBox="0 0 22 23" fill="none"
+                             xmlns="http://www.w3.org/2000/svg">
                             <path d="M22.9036 17.728C22.5203 16.4822 20.8911 15.2364 17.7286 13.7989C16.387 13.128 14.7578 13.4155 13.7036 14.5655C12.6495 13.8947 11.6911 13.0322 10.8286 12.1697C9.96613 11.3072 9.19946 10.3489 8.4328 9.29471C9.48696 8.24054 9.8703 6.61138 9.19946 5.26971C7.76196 2.10721 6.51613 0.478042 5.2703 0.094709C4.79113 -0.0969577 4.31196 -0.00112434 3.92863 0.190542C3.73696 0.286376 -0.192203 2.58638 -0.000535893 4.40721C0.382797 8.43221 3.73696 13.128 6.80363 16.1947C9.8703 19.2614 14.5661 22.6155 18.5911 22.9989H18.687C20.5078 22.9989 22.712 19.2614 22.8078 19.0697C22.9995 18.6864 23.0953 18.2072 22.9036 17.728ZM21.4661 18.3989C20.6995 19.7405 19.1661 21.5614 18.5911 21.5614C14.9495 21.2739 10.637 18.1114 7.76196 15.1405C4.88696 12.1697 1.72446 7.95304 1.43696 4.31138C1.43696 3.83221 3.2578 2.29888 4.59946 1.43638H4.6953H4.79113C5.17446 1.53221 6.1328 2.20304 7.8578 5.84471C8.33696 6.80304 7.95363 7.95304 7.09113 8.52804C6.80363 8.71971 6.7078 9.19888 6.89946 9.48637C7.76196 10.828 8.7203 12.0739 9.77446 13.128C10.9245 14.1822 12.0745 15.2364 13.4161 16.003C13.7995 16.1947 14.1828 16.0989 14.3745 15.8114C14.9495 14.9489 16.0995 14.5655 17.0578 15.0447C20.6995 16.6739 21.3703 17.728 21.4661 18.1114C21.562 18.2072 21.562 18.303 21.4661 18.3989Z"
                                   fill="#59D230"/>
                         </svg>
                     </div>
                     <div class="tel-number__content">
-                        <span>+38050 533 63 99</span>
-                        <span>+38095 533 63 99 </span>
+                        <a href="tel:+38050 533 63 99">+38050 533 63 99</a>
+                        <a href="tel:+38050 533 63 99">+38095 533 63 99 </a>
                     </div>
 
                     <button style="display: none" class="btn">
@@ -39,7 +43,7 @@
                         </svg>
                     </button>
                 </div>
-                <div class="search col-3">
+                <div class="search">
                     <input type="text" class="form" name="" placeholder="Поиск...">
                     <span class="search-icon">
                         <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -49,7 +53,7 @@
                     </span>
                 </div>
 
-                <div class="language-selection col-auto">
+                <div class="language-selection">
                     <button class="btn"><span>Русский</span>
                         <span><svg width="5" height="4" viewBox="0 0 5 4" fill="none"
                                    xmlns="http://www.w3.org/2000/svg">
@@ -59,7 +63,7 @@
                     </button>
                 </div>
 
-                <div class="info col-1">
+                <div class="info">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarHeader"
                             aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
@@ -75,7 +79,7 @@
                     <span class="info-text">Инфо</span>
                 </div>
 
-                <div class="basket col-2">
+                <div class="basket">
                     <button class="basket-icon  btn" name="">
                         <div class="basket-icon">
                             <svg width="27" height="24" viewBox="0 0 27 24" fill="none"
@@ -94,7 +98,7 @@
     <!-- header-button  -->
     <div class="header-button">
         <div class="container">
-            <nav style="display: flex">
+            <nav>
                 <div class="header-button__catalog">
                     <a href="">
                         <svg width="20" height="10" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -162,7 +166,7 @@
                                 сборке и настройке велосипедов</p>
                             <button class="btn">Хочу свой велосипед</button>
                         </div>
-                        <img  src="images/banner/MaskGroup1.jpg" alt="">
+                        <img src="images/banner/MaskGroup1.jpg" alt="">
                     </div>
 
                     <div class="banner-col__inner-dwo">
@@ -171,7 +175,7 @@
                                 и запчасти в нашем</p>
                             <a href="">каталоге</a>
                         </div>
-                        <img  src="images/banner/MaskGroup2.jpg" alt="">
+                        <img src="images/banner/MaskGroup2.jpg" alt="">
                     </div>
                 </div>
 
@@ -709,7 +713,8 @@
                     <div class="ourAdvantages-col__figure">5</div>
                     <div class="ourAdvantages-col__text">
                         <div class="ourAdvantages-col__title">профессиональные консультации</div>
-                        <div class="ourAdvantages-col__content">Каждый год мы бываем на веловыставках, знаем все о новинках в этой сфере и грамотно
+                        <div class="ourAdvantages-col__content">Каждый год мы бываем на веловыставках, знаем все о
+                            новинках в этой сфере и грамотно
                             консультируем клиентов.
                         </div>
                     </div>
@@ -928,7 +933,6 @@
         </div>
 
     </section>
-
     <!--blog -->
     <section class="blog">
         <div class="container">
@@ -995,12 +999,15 @@
     </section>
 
 </main>
-<footer class="footer">
+
+<footer class="footer" id=" footer">
     <div class="container">
         <div class="row">
             <div class="col">
                 <div class="footer-logo">
-                    <img src="images/footer/logo-footer.png" alt="">
+                    <a href="#">
+                        <img src="images/footer/logo-footer.png" alt="">
+                    </a>
                     <div class="footer-logo__content">
                         Велосипеды, велоаксессуары,
                         запчасти к велосипедам, компоненты
@@ -1010,7 +1017,7 @@
             </div>
             <div class="col">
                 <ul>
-                    <li><a class="li-activ" href="">Каталог</a></li>
+                    <H1>Каталог</H1>
                     <li><a href="">Велосипеды</a></li>
                     <li><a href="">Аксессуары</a></li>
                     <li><a href="">Экипировка/Форма</a></li>
@@ -1023,7 +1030,7 @@
             </div>
             <div class="col">
                 <ul>
-                    <li><a href="" class="li-activ">Инфо</a></li>
+                    <h1>Инфо</h1>
                     <li><a href="">О нас</a></li>
                     <li><a href="">Доставка и оплата</a></li>
                     <li><a href="">Видеообзоры</a></li>
